--- a/css/blocks/advantages.scss
+++ b/css/blocks/advantages.scss
@@ -17,6 +17,10 @@
     @include tablets {
         // margin-bottom: 4.7%;
     }
+    @include phones {
+        flex-direction: row;
+        margin-bottom: 10%;
+    }
 }
 
 .advantages__icon-holder {
@@ -28,6 +32,12 @@
     justify-content: center;
     align-items: center;
     margin-bottom: rem(35px);
+    @include phones {
+        height: d-m(rem(125px));
+        width: d-m(rem(125px));
+        margin-bottom: 0;
+        margin-right: 5%;
+    }  
 }
 
 .advantages__icon {
@@ -38,18 +48,29 @@
     //Вытащил следующие стили из svg-файлов, цвет поменял на нужный, без них нормально не отрисовывается
     height: rem(70px);
     width: rem(70px);
+    @include phones {
+        height: d-m(rem(70px));
+        width: d-m(rem(70px));
+    }  
 }
 
 .advantages__content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include phones {
+        align-items: flex-start;
+    }  
     h3{   
         font-size: rem(27px);
         font-weight: bold;
         color: $black;
         margin-bottom: rem(20px);
-        text-align: center;  
+        text-align: center;
+        @include phones {
+            font-size: d-m(rem(27px));
+            text-align: left;
+        }  
     }
 
     p {
@@ -60,5 +81,10 @@
         @include tablets {
             max-width: 60%;
         }
+        @include phones {
+            font-size: d-m(rem(18px));
+            text-align: left;
+            max-width: d-m(rem(285px));
+        }  
     }
 }
