--- a/css/main.css
+++ b/css/main.css
@@ -378,7 +378,6 @@ body {
 
 .section {
   height: 100vh;
-  min-height: 36.11111rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -406,7 +405,7 @@ body {
     color: #0f5a47; }
   @media screen and (max-width: 480px) {
     .title {
-      font-size: 3.2rem; } }
+      font-size: 2.93333rem; } }
 
 h1,
 h2,
@@ -554,7 +553,9 @@ button {
   @media screen and (max-width: 768px) {
     .hero {
       background-size: 70%;
-      background-position-y: top; } }
+      background-position-y: top;
+      padding-top: 2.5%;
+      padding-bottom: 4.5%; } }
   .hero::after {
     content: "";
     background: url("../img/bg/bg-single-leaf.png") no-repeat;
@@ -591,13 +592,17 @@ button {
 .hero__main {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  width: 100%; }
   @media screen and (max-width: 768px) {
     .hero__main {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
-      flex-direction: column; } }
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .hero__promo {
   margin-right: 7.3%;
@@ -608,7 +613,9 @@ button {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  margin-top: 4.72222rem; }
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-top: 5rem; }
   @media screen and (max-width: 768px) {
     .hero__promo {
       max-width: 28.6rem;
@@ -625,13 +632,14 @@ button {
       -webkit-box-ordinal-group: 0;
       -ms-flex-order: -1;
       order: -1;
-      margin-bottom: 15%; } }
+      margin-bottom: 10%;
+      width: 55%; } }
   @media screen and (max-width: 480px) {
     .hero__product {
       -webkit-box-ordinal-group: 0;
       -ms-flex-order: -1;
       order: -1;
-      margin-bottom: 10%; } }
+      margin-bottom: 7%; } }
   .hero__product::after {
     content: "";
     background: url("../img/bg/hero-berries.png") no-repeat;
@@ -644,7 +652,9 @@ button {
     left: 5.66667rem; }
     @media screen and (max-width: 768px) {
       .hero__product::after {
-        bottom: -3.61111rem; } }
+        width: 80%;
+        top: 45%;
+        left: 20%; } }
   .hero__product::before {
     content: "";
     background: url("../img/bg/hero-blueberry.png") no-repeat;
@@ -664,11 +674,13 @@ button {
         height: 11.16667rem;
         position: absolute;
         z-index: 1;
-        bottom: 2.77778rem;
-        left: 0.55556rem; } }
+        top: 35%;
+        left: -3%; } }
 
-.hero__product-pic {
-  width: 27.94444rem; }
+@media screen and (max-width: 768px) {
+  .hero__product-pic {
+    width: 100%;
+    height: auto; } }
 
 .hero__title {
   font-size: 3.33333rem;
@@ -679,8 +691,11 @@ button {
   @media screen and (max-width: 768px) {
     .hero__title {
       text-align: center;
-      font-size: 4rem;
-      line-height: 4rem; } }
+      font-size: 3.5rem;
+      line-height: 3.08333rem; } }
+  @media screen and (max-width: 768px) {
+    .hero__title {
+      margin-bottom: 1.5%; } }
 
 .hero__info {
   font-size: 1.16667rem;
@@ -695,9 +710,9 @@ button {
       text-align: center; } }
   @media screen and (max-width: 480px) {
     .hero__info {
-      font-size: 1.38889rem;
+      font-size: 1.27778rem;
       text-align: center;
-      margin-bottom: 1.38889rem; } }
+      margin-bottom: 3%; } }
 
 .hero__features {
   display: -webkit-box;
@@ -719,19 +734,20 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   margin-right: 2.5rem; }
   @media screen and (max-width: 768px) {
     .hero__feature-snippet {
       margin-right: 0;
-      font-size: calc(0.88889rem * 1.2); } }
+      font-size: 1.06667rem; } }
   @media screen and (max-width: 480px) {
     .hero__feature-snippet {
-      font-size: calc(0.88889rem * 1.5);
       width: 30%; } }
 
 .feature-snippet__info {
-  width: 3.88889rem;
-  width: 65%; }
+  width: 55%; }
 
 .hero__feature-icon {
   width: 2.77778rem;
@@ -759,13 +775,13 @@ button {
       border-radius: 2rem;
       padding: 1.33333rem 2.33333rem;
       font-size: 1.26667rem; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 768px) {
     .btn {
-      width: 13rem;
-      height: 4.83333rem;
-      border-radius: 2.5rem;
-      padding: 1.66667rem 2.91667rem;
-      font-size: 1.58333rem; } }
+      width: 8.66667rem;
+      height: 3.22222rem;
+      border-radius: 1.66667rem;
+      padding: 1.11111rem 1.94444rem;
+      font-size: 1.05556rem; } }
   .btn:hover {
     background-color: #0b4d3c; }
   .btn:active {
@@ -812,7 +828,7 @@ button {
   align-items: center; }
   @media screen and (max-width: 480px) {
     .why__promo {
-      margin-bottom: 10%; } }
+      margin-bottom: 5%; } }
 
 .why__title {
   text-align: center;
@@ -827,7 +843,7 @@ button {
   @media screen and (max-width: 480px) {
     .why__description {
       max-width: 100%;
-      font-size: 1.5rem; } }
+      font-size: 1.33333rem; } }
 
 .advantages {
   display: -webkit-box;
@@ -863,7 +879,8 @@ button {
       -webkit-box-direction: normal;
       -ms-flex-direction: row;
       flex-direction: row;
-      margin-bottom: 10%; } }
+      margin-bottom: 7%;
+      width: 100%; } }
 
 .advantages__icon-holder {
   width: 6.94444rem;
@@ -882,10 +899,15 @@ button {
   margin-bottom: 1.94444rem; }
   @media screen and (max-width: 480px) {
     .advantages__icon-holder {
-      height: 10.41667rem;
-      width: 10.41667rem;
+      width: 20%;
+      height: auto;
       margin-bottom: 0;
-      margin-right: 5%; } }
+      margin-right: 5%;
+      position: relative; }
+      .advantages__icon-holder:after {
+        content: "";
+        display: block;
+        padding-bottom: 100%; } }
 
 .advantages__icon {
   fill: none;
@@ -896,8 +918,8 @@ button {
   width: 3.88889rem; }
   @media screen and (max-width: 480px) {
     .advantages__icon {
-      height: 5.83333rem;
-      width: 5.83333rem; } }
+      width: 50%;
+      position: absolute; } }
 
 .advantages__content {
   display: -webkit-box;
@@ -923,8 +945,9 @@ button {
     text-align: center; }
     @media screen and (max-width: 480px) {
       .advantages__content h3 {
-        font-size: 2.25rem;
-        text-align: left; } }
+        font-size: 1.91667rem;
+        text-align: left;
+        margin-bottom: 3%; } }
   .advantages__content p {
     color: #666666;
     font-size: 1rem;
@@ -935,7 +958,7 @@ button {
         max-width: 60%; } }
     @media screen and (max-width: 480px) {
       .advantages__content p {
-        font-size: 1.5rem;
+        font-size: 1.16667rem;
         text-align: left;
         max-width: 23.75rem; } }
 
@@ -1130,7 +1153,8 @@ button {
 .form {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  margin: 0 auto; }
   @media screen and (max-width: 768px) {
     .form {
       -webkit-box-orient: vertical;
