--- a/css/misc/layout.scss
+++ b/css/misc/layout.scss
@@ -45,7 +45,7 @@ body {
 
 .section {
   height: 100vh;
-  min-height: rem(650px);
+  // min-height: rem(650px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -68,7 +68,7 @@ body {
     color: $btn-green;
   }
   @include phones {
-    font-size: d-t(rem(48px));
+    font-size: d-t(rem(44px));
   }
 }
 
