--- a/css/blocks/advantages.scss
+++ b/css/blocks/advantages.scss
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     @include tablets {
-        // margin-bottom: 4.7%;
+        margin-bottom: 3%;
     }
     @include phones {
         flex-direction: row;
@@ -34,12 +34,10 @@
     align-items: center;
     margin-bottom: rem(35px);
     @include phones {
-        // height: d-m(rem(95px));
-        // width: d-m(rem(95px));
-        width: 20%;
+        width: 25%;
         height: auto;
         margin-bottom: 0;
-        margin-right: 5%;
+        margin-right: 3%;
         position: relative;
         &:after {
             content: "";
@@ -58,10 +56,9 @@
     height: rem(70px);
     width: rem(70px);
     @include phones {
-        width: 50%;
+        width: 55%;
+        height: auto;
         position: absolute;
-        // left: 50%;
-        // top: 50%;
     }  
 }
 
@@ -92,6 +89,7 @@
         text-align: center; 
         @include tablets {
             max-width: 60%;
+            font-size: d-t(rem(18px));
         }
         @include phones {
             font-size: d-m(rem(14px));
