--- a/css/blocks/footer.scss
+++ b/css/blocks/footer.scss
@@ -1,11 +1,11 @@
-.footer {
-    // height: rem(90px);
-}
-
 .footer__container {
     display: flex;
     align-items: center;
     height: 100%;
+    @include phones {
+        flex-direction: column;
+        justify-content: space-around;
+    }
 }
 
 .footer__info {
@@ -17,9 +17,21 @@
         font-style: normal;
         margin-bottom: rem(5px);
         @include tablets {
-            font-size: rem(25px);
-            line-height: rem(28px);
+            font-size: d-t(rem(21px));
+            line-height: d-t(rem(24px));
         }
+        @include phones {
+            font-size: d-t(rem(21px));
+            line-height: d-t(rem(24px));
+            margin-bottom: 1%;
+        }
+    }
+    @include phones {
+        width: 100%;
+        text-align: center;
+        padding-top: 5%;
+        margin-bottom: 3%;
+        
     }
 }
 
@@ -27,4 +39,9 @@
     width: 50%;
     display: flex;
     justify-content: flex-end;
+    @include phones {
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 8%;
+    }
 }
