--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -1,10 +1,13 @@
 .form {
     display: flex;
-    margin: 0 auto;
     @include tablets {
         flex-direction: column;
         width: 65%;
         align-items: center;
+        margin: 0 auto;
+    }
+    @include phones {
+        width: 100%;
     }
 }
 
@@ -22,12 +25,15 @@
 
 .form__row {
     display: flex;
-    margin-bottom: rem(15px);
+    margin-bottom: 3%;
+    @include phones {
+        margin-bottom: 1%;
+    }
 }
 
 .form__label { 
     flex: 1;
-    margin-left: rem(20px);
+    margin-left: 4.3%;
     &:first-child {
         margin-left: 0;
     }
@@ -37,6 +43,9 @@
     color: $btn-green;
     font-size: rem(18px);
     line-height: rem(30px);
+    @include phones {
+        line-height: 120%;
+    }
 }
 
 .form__input {
@@ -47,22 +56,32 @@
     &:focus {
         outline: rem(3px) solid $golden-khaki;
     }
+    @include phones {
+        padding: d-m(rem(12px)) 0px d-m(rem(12px)) d-m(rem(10px));
+    }
 }
 
 .form__textarea {
     height: rem(180px);
     resize: none;
+    @include phones {
+        height: d-m(rem(100px));
+        padding: 3% 0 3% 3%;
+    }
 }
 
 .form__options {
-    margin-bottom: rem(40px);
+    margin-bottom: 8%;
     .form__row {
-        margin-bottom: rem(12px);
+        margin-bottom: 2%;
     }
     @include tablets {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    @include phones {
+        margin-bottom: 1%;
     }
 }
 
@@ -153,6 +172,9 @@
 }
 
 .form__buttons {
+    .form__row {
+        margin-bottom: 0;
+    }
     @include tablets {
         display: flex;
         justify-content: center;
