--- a/css/blocks/review-snippet.scss
+++ b/css/blocks/review-snippet.scss
@@ -16,6 +16,10 @@
         justify-content: center;
         min-height: rem(720px);
     }
+    @include phones {
+        min-height: 0;
+        padding-top: 15%;
+    }
 }
 
 .review-snippet__userpic {
@@ -24,6 +28,9 @@
     @include tablets {
         margin-right: 0;
         margin-bottom: 5%;
+    }
+    @include phones {
+        width: 30%;
     }
 }
 
@@ -38,10 +45,13 @@
         flex-direction: column;
         align-items: center;
     }
+    @include tablets {
+        width: 85%;
+    }
 }
 
 .review-snippet__title {
-    margin-bottom: rem(25px);
+    margin-bottom: 3%;
     margin-right: auto;
     h3 {
         font-size: rem(30px);
@@ -49,7 +59,6 @@
         font-weight: $medium;
         @include tablets {
             text-align: center;
-            
         }
     }
     @include tablets {
@@ -60,12 +69,16 @@
 
 .review-snippet__text {
     @include grey-text;
-    @include tablets {
-        margin-bottom: rem(42px);
+    margin-bottom: 5%;
+    @include phones{
+        font-size: d-m(rem(15px));
     }
 }
 
 .review-snippet__author {
     @include grey-text;
-    
+    @include phones{
+        margin-bottom: 5%;
+        font-size: d-m(rem(15px));
+    }
 }
