--- a/css/blocks/social.scss
+++ b/css/blocks/social.scss
@@ -3,17 +3,22 @@
     display: flex;
     justify-content: space-between;
     @include tablets {
-        width: rem(175px);
+        width: d-t(rem(145px));
+    }
+    @include phones {
+        width: d-m(rem(145px));
+        
     }
 }
 
 .social__item {
-    display: inline-block;
+    display: block;
     width: 15%;
 }
 
 .social__icon {
     width: 100%;
+    display: block;
     fill: $social-grey;    
     &:hover {
         fill: $black;
