--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -5,6 +5,9 @@
         @include bg-slice(rem(83px), rem(90px), "../img/bg/team-raspberry-bottom-left.png");
         bottom: rem(-44px);
         left: rem(36px);
+        @include phones {
+            left: 3%;
+        }
     }
     @include tablets {
         background-size: 30%;
@@ -18,12 +21,18 @@
     flex-direction: column;
     align-items: center;
     @include tablets {
-        // padding-top: 0;
         justify-content: center;
+        padding-top: 5%;
+    }
+    @include phones {
+        justify-content: flex-start;
     }
 }
 
 .team__title {
     text-align: center;
     margin-bottom: rem(50px);
+    @include tablets {
+        margin-bottom: 4.5%;
+    }
 }
