--- a/css/main.css
+++ b/css/main.css
@@ -405,7 +405,7 @@ body {
     color: #0f5a47; }
   @media screen and (max-width: 480px) {
     .title {
-      font-size: 2.93333rem; } }
+      font-size: 2.91667rem; } }
 
 h1,
 h2,
@@ -618,7 +618,7 @@ button {
   margin-top: 5rem; }
   @media screen and (max-width: 768px) {
     .hero__promo {
-      max-width: 28.6rem;
+      max-width: 60%;
       margin-right: 0;
       -webkit-box-align: center;
       -ms-flex-align: center;
@@ -636,9 +636,6 @@ button {
       width: 55%; } }
   @media screen and (max-width: 480px) {
     .hero__product {
-      -webkit-box-ordinal-group: 0;
-      -ms-flex-order: -1;
-      order: -1;
       margin-bottom: 7%; } }
   .hero__product::after {
     content: "";
@@ -649,7 +646,7 @@ button {
     position: absolute;
     z-index: 1;
     bottom: -6.5rem;
-    left: 5.66667rem; }
+    right: 0px; }
     @media screen and (max-width: 768px) {
       .hero__product::after {
         width: 80%;
@@ -677,10 +674,12 @@ button {
         top: 35%;
         left: -3%; } }
 
-@media screen and (max-width: 768px) {
-  .hero__product-pic {
-    width: 100%;
-    height: auto; } }
+.hero__product-pic {
+  max-width: 45.7vw; }
+  @media screen and (max-width: 768px) {
+    .hero__product-pic {
+      width: 100%;
+      height: auto; } }
 
 .hero__title {
   font-size: 3.33333rem;
@@ -707,7 +706,8 @@ button {
   @media screen and (max-width: 768px) {
     .hero__info {
       font-size: 1.38889rem;
-      text-align: center; } }
+      text-align: center;
+      margin-bottom: 5%; } }
   @media screen and (max-width: 480px) {
     .hero__info {
       font-size: 1.27778rem;
@@ -873,6 +873,9 @@ button {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media screen and (max-width: 768px) {
+    .advantages__snippet {
+      margin-bottom: 3%; } }
   @media screen and (max-width: 480px) {
     .advantages__snippet {
       -webkit-box-orient: horizontal;
@@ -899,10 +902,10 @@ button {
   margin-bottom: 1.94444rem; }
   @media screen and (max-width: 480px) {
     .advantages__icon-holder {
-      width: 20%;
+      width: 25%;
       height: auto;
       margin-bottom: 0;
-      margin-right: 5%;
+      margin-right: 3%;
       position: relative; }
       .advantages__icon-holder:after {
         content: "";
@@ -918,7 +921,8 @@ button {
   width: 3.88889rem; }
   @media screen and (max-width: 480px) {
     .advantages__icon {
-      width: 50%;
+      width: 55%;
+      height: auto;
       position: absolute; } }
 
 .advantages__content {
@@ -955,7 +959,8 @@ button {
     text-align: center; }
     @media screen and (max-width: 768px) {
       .advantages__content p {
-        max-width: 60%; } }
+        max-width: 60%;
+        font-size: 1.2rem; } }
     @media screen and (max-width: 480px) {
       .advantages__content p {
         font-size: 1.16667rem;
@@ -974,6 +979,9 @@ button {
     z-index: 1;
     top: 5.5vh;
     right: 1.3vw; }
+    @media screen and (max-width: 480px) {
+      .reviews::before {
+        top: 3.5%; } }
   .reviews:after {
     content: "";
     background: url("../img/bg/reviews-bg-left-bottom-berries.png") no-repeat;
@@ -984,6 +992,9 @@ button {
     z-index: 1;
     left: 0;
     bottom: -7.22222rem; }
+  @media screen and (max-width: 480px) {
+    .reviews {
+      padding-top: 0; } }
 
 .reviews__inner {
   display: -webkit-box;
@@ -1016,6 +1027,9 @@ button {
     .reviews__slider {
       width: 64%;
       margin-bottom: 0; } }
+  @media screen and (max-width: 480px) {
+    .reviews__slider {
+      width: 100%; } }
 
 .reviews__switcher {
   display: -webkit-box;
@@ -1028,6 +1042,9 @@ button {
   @media screen and (max-width: 768px) {
     .reviews__switcher {
       width: 40%; } }
+  @media screen and (max-width: 480px) {
+    .reviews__switcher {
+      width: 60%; } }
 
 .reviews__switcher-item {
   width: 28%; }
@@ -1081,6 +1098,10 @@ button {
       -ms-flex-pack: center;
       justify-content: center;
       min-height: 40rem; } }
+  @media screen and (max-width: 480px) {
+    .review-snippet {
+      min-height: 0;
+      padding-top: 15%; } }
 
 .review-snippet__userpic {
   width: 14.11111rem;
@@ -1089,6 +1110,9 @@ button {
     .review-snippet__userpic {
       margin-right: 0;
       margin-bottom: 5%; } }
+  @media screen and (max-width: 480px) {
+    .review-snippet__userpic {
+      width: 30%; } }
 
 .review-snippet__content {
   max-width: 27.77778rem;
@@ -1109,9 +1133,12 @@ button {
       -webkit-box-align: center;
       -ms-flex-align: center;
       align-items: center; } }
+  @media screen and (max-width: 768px) {
+    .review-snippet__content {
+      width: 85%; } }
 
 .review-snippet__title {
-  margin-bottom: 1.38889rem;
+  margin-bottom: 3%;
   margin-right: auto; }
   .review-snippet__title h3 {
     font-size: 1.66667rem;
@@ -1127,14 +1154,19 @@ button {
 
 .review-snippet__text {
   color: #666666;
-  font-size: 1rem; }
-  @media screen and (max-width: 768px) {
+  font-size: 1rem;
+  margin-bottom: 5%; }
+  @media screen and (max-width: 480px) {
     .review-snippet__text {
-      margin-bottom: 2.33333rem; } }
+      font-size: 1.25rem; } }
 
 .review-snippet__author {
   color: #666666;
   font-size: 1rem; }
+  @media screen and (max-width: 480px) {
+    .review-snippet__author {
+      margin-bottom: 5%;
+      font-size: 1.25rem; } }
 
 .order {
   background: #cfdeda url("../img/bg/order-bg.jpg") no-repeat;
@@ -1153,8 +1185,7 @@ button {
 .form {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  margin: 0 auto; }
+  display: flex; }
   @media screen and (max-width: 768px) {
     .form {
       -webkit-box-orient: vertical;
@@ -1164,7 +1195,11 @@ button {
       width: 65%;
       -webkit-box-align: center;
       -ms-flex-align: center;
-      align-items: center; } }
+      align-items: center;
+      margin: 0 auto; } }
+  @media screen and (max-width: 480px) {
+    .form {
+      width: 100%; } }
 
 .form__col {
   -webkit-box-flex: 1;
@@ -1182,13 +1217,16 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 0.83333rem; }
+  margin-bottom: 3%; }
+  @media screen and (max-width: 480px) {
+    .form__row {
+      margin-bottom: 1%; } }
 
 .form__label {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  margin-left: 1.11111rem; }
+  margin-left: 4.3%; }
   .form__label:first-child {
     margin-left: 0; }
 
@@ -1196,6 +1234,9 @@ button {
   color: #0f5a47;
   font-size: 1rem;
   line-height: 1.66667rem; }
+  @media screen and (max-width: 480px) {
+    .form__label-title {
+      line-height: 120%; } }
 
 .form__input {
   width: 100%;
@@ -1204,15 +1245,22 @@ button {
   outline: 0.16667rem solid transparent; }
   .form__input:focus {
     outline: 0.16667rem solid #dde3bd; }
+  @media screen and (max-width: 480px) {
+    .form__input {
+      padding: 1rem 0px 1rem 0.83333rem; } }
 
 .form__textarea {
   height: 10rem;
   resize: none; }
+  @media screen and (max-width: 480px) {
+    .form__textarea {
+      height: 8.33333rem;
+      padding: 3% 0 3% 3%; } }
 
 .form__options {
-  margin-bottom: 2.22222rem; }
+  margin-bottom: 8%; }
   .form__options .form__row {
-    margin-bottom: 0.66667rem; }
+    margin-bottom: 2%; }
   @media screen and (max-width: 768px) {
     .form__options {
       display: -webkit-box;
@@ -1225,6 +1273,9 @@ button {
       -webkit-box-align: center;
       -ms-flex-align: center;
       align-items: center; } }
+  @media screen and (max-width: 480px) {
+    .form__options {
+      margin-bottom: 1%; } }
 
 .form__radio {
   position: relative;
@@ -1296,6 +1347,9 @@ button {
   -o-transition: width .3s, height .3s;
   transition: width .3s, height .3s; }
 
+.form__buttons .form__row {
+  margin-bottom: 0; }
+
 @media screen and (max-width: 768px) {
   .form__buttons {
     display: -webkit-box;
@@ -1358,6 +1412,9 @@ button {
     z-index: 1;
     bottom: -2.44444rem;
     left: 2rem; }
+    @media screen and (max-width: 480px) {
+      .team::after {
+        left: 3%; } }
   @media screen and (max-width: 768px) {
     .team {
       background-size: 30%; } }
@@ -1379,11 +1436,20 @@ button {
     .team__inner {
       -webkit-box-pack: center;
       -ms-flex-pack: center;
-      justify-content: center; } }
+      justify-content: center;
+      padding-top: 5%; } }
+  @media screen and (max-width: 480px) {
+    .team__inner {
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
+      justify-content: flex-start; } }
 
 .team__title {
   text-align: center;
   margin-bottom: 2.77778rem; }
+  @media screen and (max-width: 768px) {
+    .team__title {
+      margin-bottom: 4.5%; } }
 
 .accordeon {
   display: -webkit-box;
@@ -1427,11 +1493,11 @@ button {
   margin-bottom: 1.66667rem; }
   @media screen and (max-width: 480px) {
     .accordeon__pic {
-      margin-bottom: 1.11111rem; } }
+      margin-bottom: 5%; } }
 
 @media screen and (max-width: 480px) {
   .accordeon__collapsible {
-    width: 120%; } }
+    width: 150%; } }
 
 .accordeon__collapsible--active .accordeon__arrow-icon {
   -webkit-transform: scaleY(-1);
@@ -1453,7 +1519,7 @@ button {
     margin-right: 0.27778rem; }
     @media screen and (max-width: 480px) {
       .accordeon__unfolder h3 {
-        font-size: 1.75rem; } }
+        font-size: 1.33333rem; } }
 
 .accordeon__arrow-icon {
   height: 0.5rem;
@@ -1466,10 +1532,13 @@ button {
   height: 0;
   overflow: hidden;
   position: absolute;
-  top: calc(100% + rem(12px));
   left: 0;
   right: 0;
   margin: auto; }
+  @media screen and (max-width: 480px) {
+    .accordeon__info {
+      width: 150%;
+      left: -25%; } }
   .accordeon__info h4 {
     color: #281e1e;
     font-size: 1rem;
@@ -1510,6 +1579,14 @@ button {
 .accordeon-menu__item-collapsible--active .accordeon-menu__info {
   width: 29.44444rem;
   padding: 3.61111rem 6.94444rem 0.55556rem 1.66667rem; }
+  @media screen and (max-width: 480px) {
+    .accordeon-menu__item-collapsible--active .accordeon-menu__info {
+      width: calc(100% - 85px);
+      padding: 8% 5% 5% 4%; } }
+
+@media screen and (max-width: 480px) {
+  .accordeon-menu__item-collapsible--active ~ .accordeon-menu__item-collapsible {
+    display: none; } }
 
 .accordeon-menu__unfolder {
   width: 5.55556rem;
@@ -1533,6 +1610,9 @@ button {
   @media screen and (max-width: 768px) {
     .accordeon-menu__unfolder {
       width: 7.22222rem; } }
+  @media screen and (max-width: 480px) {
+    .accordeon-menu__unfolder {
+      width: 7.08333rem; } }
   .accordeon-menu__unfolder--bg--coconut {
     background-image: url("../img/bg/accordeon-collapsible-bg-coconut.jpg"); }
   .accordeon-menu__unfolder--bg--honey {
@@ -1558,22 +1638,37 @@ button {
   .accordeon-menu__info p {
     font-size: 0.88889rem;
     line-height: 1.33333rem; }
+    @media screen and (max-width: 480px) {
+      .accordeon-menu__info p {
+        font-size: 1.33333rem;
+        line-height: 2rem; } }
 
 .accordeon-menu__close-btn {
   position: absolute;
   top: 1.38889rem;
   right: 1.66667rem; }
+  @media screen and (max-width: 768px) {
+    .accordeon-menu__close-btn {
+      top: 3.5%;
+      right: 3%; } }
 
 .accordeon-menu__close-icon {
   height: 1rem;
   width: 1rem;
   fill: #c4c5c6; }
+  @media screen and (max-width: 768px) {
+    .accordeon-menu__close-icon {
+      height: 1.2rem;
+      width: 1.2rem; } }
 
 .contacts__footer {
   position: absolute;
   bottom: 0;
   background: #ffffff;
   height: 15%; }
+  @media screen and (max-width: 480px) {
+    .contacts__footer {
+      height: 20%; } }
 
 .map {
   width: 100%;
@@ -1589,6 +1684,14 @@ button {
   -ms-flex-align: center;
   align-items: center;
   height: 100%; }
+  @media screen and (max-width: 480px) {
+    .footer__container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -ms-flex-pack: distribute;
+      justify-content: space-around; } }
 
 .footer__info {
   width: 50%; }
@@ -1600,8 +1703,19 @@ button {
     margin-bottom: 0.27778rem; }
     @media screen and (max-width: 768px) {
       .footer__info address {
-        font-size: 1.38889rem;
-        line-height: 1.55556rem; } }
+        font-size: 1.4rem;
+        line-height: 1.6rem; } }
+    @media screen and (max-width: 480px) {
+      .footer__info address {
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+        margin-bottom: 1%; } }
+  @media screen and (max-width: 480px) {
+    .footer__info {
+      width: 100%;
+      text-align: center;
+      padding-top: 5%;
+      margin-bottom: 3%; } }
 
 .footer__social {
   width: 50%;
@@ -1611,6 +1725,13 @@ button {
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end; }
+  @media screen and (max-width: 480px) {
+    .footer__social {
+      width: 100%;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      margin-bottom: 8%; } }
 
 .social {
   width: 8.05556rem;
@@ -1622,14 +1743,18 @@ button {
   justify-content: space-between; }
   @media screen and (max-width: 768px) {
     .social {
-      width: 9.72222rem; } }
+      width: 9.66667rem; } }
+  @media screen and (max-width: 480px) {
+    .social {
+      width: 12.08333rem; } }
 
 .social__item {
-  display: inline-block;
+  display: block;
   width: 15%; }
 
 .social__icon {
   width: 100%;
+  display: block;
   fill: #b2b2b2; }
   .social__icon:hover {
     fill: #000000; }
