--- a/css/main.css
+++ b/css/main.css
@@ -618,7 +618,7 @@ button {
   margin-top: 5rem; }
   @media screen and (max-width: 768px) {
     .hero__promo {
-      max-width: 60%;
+      max-width: 25rem;
       margin-right: 0;
       -webkit-box-align: center;
       -ms-flex-align: center;
@@ -634,9 +634,6 @@ button {
       order: -1;
       margin-bottom: 10%;
       width: 55%; } }
-  @media screen and (max-width: 480px) {
-    .hero__product {
-      margin-bottom: 7%; } }
   .hero__product::after {
     content: "";
     background: url("../img/bg/hero-berries.png") no-repeat;
