--- a/css/main.css
+++ b/css/main.css
@@ -546,6 +546,36 @@ button {
   font-size: 1rem;
   line-height: 1.66667rem; }
 
+.fullscreen-nav {
+  background: rgba(47, 50, 52, 0.99);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 100;
+  padding-top: 15%;
+  display: none; }
+
+.fullscreen-nav__item {
+  text-align: center; }
+
+.fullscreen-nav__link {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 2.4rem;
+  line-height: 4.8rem; }
+
+.fullscreen-nav__close-btn {
+  position: absolute;
+  top: 2.5%;
+  right: 3.5%; }
+
+.fullscreen-nav__close-icon {
+  fill: #c4c5c6;
+  width: 1.2rem;
+  height: 1.2rem; }
+
 .hero {
   background: #61c4d9 url("../img/bg/hero-bg-branch.png") no-repeat right;
   padding-top: 1.33333rem;
