--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ $social-grey: #b2b2b2;
 $cross-light-grey: #c4c5c6;
 $dark-grey: #2a2a29;
 $dark-grey-opacity: rgba(47, 50, 52, 0.929);
+$dark-grey-fnav: rgba(47, 50, 52, 0.99);
 $title-dark-grey: #323232;
 $btn-green: #0f5a47;
 $btn-green-hover: #0b4d3c;
@@ -51,6 +52,7 @@ $icon-light-blue: #aef5fe;
 @import "./blocks/phone-num.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/nav.scss";
+@import "./blocks/fullscreen-nav.scss";
 @import "./blocks/hero.scss";
 @import "./blocks/btn.scss";
 @import "./blocks/why.scss";
