--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,7 @@ $title-black: #0d0d0d;
 $dark-brown: #281e1e;
 $text-grey: #666666;
 $light-grey: #f2f5f4;
+$light-grey-bg: #f8faf9;
 $social-grey: #b2b2b2;
 $cross-light-grey: #c4c5c6;
 $dark-grey: #2a2a29;
@@ -57,6 +58,7 @@ $icon-light-blue: #aef5fe;
 @import "./blocks/btn.scss";
 @import "./blocks/why.scss";
 @import "./blocks/advantages.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/reviews.scss";
 @import "./blocks/review-snippet.scss";
 @import "./blocks/order.scss";
