--- a/css/misc/fonts.scss
+++ b/css/misc/fonts.scss
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: "Alegreya Sans";
-    src: url("../fonts/AlegreyaSans/Alegreyasanslight.woff") format("woff");
+    src: url("../fonts/AlegreyaSans/AlegreyaSans-Light.ttf") format("truetype");
     font-weight: $light;
 }
 
