--- a/css/main.scss
+++ b/css/main.scss
@@ -35,6 +35,7 @@ $btn-green-hover: #0b4d3c;
 $golden-khaki: #dde3bd;
 $light-green: #cfdeda;
 $bg-light-blue: #61c4d9;
+$light-blue-hover: #00accf;
 $icon-light-blue: #aef5fe;
 
 
