--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,7 @@ $extra-bold: 800;
 
 //colors
 $white: #ffffff;
+$white-opacity: rgba(255, 255, 255, 0.95);
 $black: #000000;
 $address-black: #010101;
 $title-black: #0d0d0d;
@@ -30,6 +31,7 @@ $dark-grey: #2a2a29;
 $dark-grey-opacity: rgba(47, 50, 52, 0.929);
 $dark-grey-fnav: rgba(47, 50, 52, 0.99);
 $title-dark-grey: #323232;
+$slider-hover-dark-grey: #2f3234;
 $btn-green: #0f5a47;
 $btn-green-hover: #0b4d3c;
 $golden-khaki: #dde3bd;
