Убрал полноэкранное меню из первой секции

--- a/css/blocks/fullscreen-nav.scss
+++ b/css/blocks/fullscreen-nav.scss
@@ -1,6 +1,6 @@
 .fullscreen-nav {
     background: $dark-grey-fnav;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     position: absolute;
     top: 0;
