--- a/css/main.scss
+++ b/css/main.scss
@@ -49,6 +49,7 @@ $icon-light-blue: #aef5fe;
 @import "./misc/mixins.scss";
 @import "./misc/fonts.scss";
 @import "./misc/layout.scss";
+@import "./misc/animations.scss";
 
 
 //blocks
