--- a/css/blocks/accordeon.scss
+++ b/css/blocks/accordeon.scss
@@ -46,6 +46,9 @@
         }
     .accordeon__info {
         height: auto;
+        animation-name: appearance;
+        animation-duration: 2.5s;
+        animation-fill-mode: forwards;
         }
 }
 
@@ -80,6 +83,9 @@
     left: 0;
     right: 0;
     margin: auto;
+    z-index: 10;
+    opacity: 0;
+    background-color: $white-opacity;
     @include phones {
         width: 150%;
         left: -25%;
