--- a/css/main.css
+++ b/css/main.css
@@ -479,6 +479,30 @@ button {
   100% {
     opacity: 1; } }
 
+@-webkit-keyframes slideRight {
+  0% {
+    left: 100%; }
+  100% {
+    left: 0; } }
+
+@keyframes slideRight {
+  0% {
+    left: 100%; }
+  100% {
+    left: 0; } }
+
+@-webkit-keyframes slideLeft {
+  0% {
+    right: 100%; }
+  100% {
+    right: 0; } }
+
+@keyframes slideLeft {
+  0% {
+    right: 100%; }
+  100% {
+    right: 0; } }
+
 .header {
   width: 100%; }
 
@@ -1053,6 +1077,12 @@ button {
       .slider::after {
         width: 18%; } }
 
+.slider__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative; }
+
 .slider__arrow {
   position: absolute;
   top: 50%;
@@ -1099,7 +1129,13 @@ button {
   justify-content: space-around;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  margin-right: 100vw;
+  position: relative;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards; }
   @media screen and (max-width: 768px) {
     .slider__item {
       -webkit-box-orient: vertical;
@@ -1125,7 +1161,8 @@ button {
     z-index: 1;
     top: 23%;
     left: -15%;
-    max-width: 20%; }
+    max-width: 20%;
+    z-index: 20; }
   .slider__product:after {
     content: "";
     background: url("../img/bg/slider-bottom-leaf.png") no-repeat;
