--- a/css/misc/animations.scss
+++ b/css/misc/animations.scss
@@ -18,3 +18,23 @@
         opacity: 1;
     }
 }
+
+@keyframes slideRight {
+    0% {
+        left: 100%;
+    }
+
+    100% {
+        left: 0;
+    }
+}
+
+@keyframes slideLeft {
+    0% {
+        right: 100%;
+    }
+
+    100% {
+        right: 0;
+    }
+}
