--- a/css/main.css
+++ b/css/main.css
@@ -1495,13 +1495,13 @@ button {
 .reviews__switcher-item {
   width: 28%; }
 
-.reviews__switch-btn--selected .reviews__small-pic {
+.reviews__switcher-item--selected .reviews__small-pic {
   border: 0.27778rem solid #0f5a47; }
-  .reviews__switch-btn--selected .reviews__small-pic:hover {
+  .reviews__switcher-item--selected .reviews__small-pic:hover {
     -webkit-box-shadow: none;
     box-shadow: none; }
   @media screen and (max-width: 768px) {
-    .reviews__switch-btn--selected .reviews__small-pic {
+    .reviews__switcher-item--selected .reviews__small-pic {
       border-width: 0.55556rem; } }
 
 .reviews__small-pic {
@@ -1529,11 +1529,14 @@ button {
   align-items: center;
   padding-left: 4.5%;
   padding-right: 4.5%;
-  display: none; }
+  display: none;
+  position: relative; }
   .review-snippet--active {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards; }
   @media screen and (max-width: 768px) {
     .review-snippet {
       -webkit-box-orient: vertical;
