--- a/css/main.css
+++ b/css/main.css
@@ -1636,30 +1636,24 @@ button {
 .order__overlay {
   position: absolute;
   top: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   overflow: hidden;
   background-color: rgba(47, 50, 52, 0.99);
-  z-index: 100;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  z-index: 50;
   display: none; }
 
 .order__modal {
   width: 16.66667rem;
-  min-height: 9.72222rem;
+  min-height: 9.44444rem;
   background: #ffffff;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 60;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
